--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BuyList_Main</string>
+    <string name="main_appCapt">Список покупок</string>
 </resources>
